# resource-pool-assignment-Ikamal

./: .gitignore  CMakeLists.txt  README.md  TASK.md
include/: resource_pool.hpp
tests/: test_resource_pool.cpp
